Bug 244817 - Incorrect display of ampersand (&) symbols in directory popup
Summary: Incorrect display of ampersand (&) symbols in directory popup
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: File Browser (other bugs)
Version First Reported In: 2.6-git
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
: 285041 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-16 06:12 UTC by Oleg Atamanenko
Modified: 2013-01-19 16:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments
Screenshot with bug (62.90 KB, image/png)
2010-07-16 06:12 UTC, Oleg Atamanenko
Details
Breadcrumbs are not updated. (21.14 KB, image/png)
2011-10-12 01:20 UTC, Oleg Atamanenko
Details
But when click on it, full path is displayed. (29.39 KB, image/png)
2011-10-12 01:20 UTC, Oleg Atamanenko
Details
It got worse: now the space has disappeared (63.90 KB, image/png)
2012-11-29 11:29 UTC, Myriam Schweingruber
Details
Ampersand Bug in Bookmarks view (184.19 KB, image/png)
2013-01-19 16:24 UTC, Florian Lindner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg Atamanenko 2010-07-16 06:12:49 UTC
Created attachment 49189 [details]
Screenshot with bug

Version:           2.3.1
OS:                Linux

If directory contains & in the name then amarok doesn't display it correctly.
I.e. directory named "Then & Now" is displayed as "Then _Now".

See attached screeenshot.

Reproducible: Always

Steps to Reproduce:
Try to open directory with & in the name.



OS: Linux (i686) release 2.6.30.10-105.2.23.fc11.i686.PAE
Compiler: gcc
Comment 1 Myriam Schweingruber 2010-07-16 11:33:54 UTC
Is all your system cofigured in UTF-8 or UTF-16? Please check your LOCALE settings
Comment 2 Oleg Atamanenko 2010-07-19 04:13:27 UTC
My locale is UTF-8.
Comment 3 Myriam Schweingruber 2010-07-19 10:14:46 UTC
Thank you for the feedback. Actually, Amarok displays it correctly in both the breadcrumb line and the File Browser, just not in the drop-down of the breadcrumb. The same breadcrumb dropdown in Dolphin displays it correctly.
Comment 4 Oleg Atamanenko 2010-07-19 10:51:38 UTC
Yes, I've tested same case in dolphin. It works perfectly - in dropdown &'s are displayed. So issue is in amarok only.
Comment 5 Myriam Schweingruber 2011-10-11 11:17:32 UTC
Is this report still valid with Amarok 2.4.3 or the current git version?
Comment 6 Oleg Atamanenko 2011-10-12 01:17:56 UTC
In 2.4.3 situation is not ok at all. Breadcrumbs are not updated during navigation. All I see is the start icon (folder with home) and its all. When I click inside empty space it is replaced with edit text which contains full path to the directory.
Comment 7 Oleg Atamanenko 2011-10-12 01:20:21 UTC
Created attachment 64442 [details]
Breadcrumbs are not updated.
Comment 8 Oleg Atamanenko 2011-10-12 01:20:47 UTC
Created attachment 64443 [details]
But when click on it, full path is displayed.
Comment 9 Myriam Schweingruber 2011-10-12 22:18:18 UTC
Thank you for the fast feedback.
Comment 10 Myriam Schweingruber 2012-11-29 11:29:45 UTC
Created attachment 75531 [details]
It got worse: now the space has disappeared

Still valid with current git
Comment 11 Myriam Schweingruber 2012-11-29 11:31:45 UTC
*** Bug 285041 has been marked as a duplicate of this bug. ***
Comment 12 Matěj Laitl 2013-01-05 10:50:37 UTC
Git commit 5d81710b932ba238c91fc62e750658f9865934fd by Matěj Laitl.
Committed on 05/01/2013 at 11:47.
Pushed by laitl into branch 'master'.

BrowserBreadcrumbItem: treat folder names with & in them accordingly
FIXED-IN: 2.7

M  +2    -0    ChangeLog
M  +3    -1    src/browsers/BrowserBreadcrumbItem.cpp

http://commits.kde.org/amarok/5d81710b932ba238c91fc62e750658f9865934fd
Comment 13 Florian Lindner 2013-01-19 16:24:36 UTC
Created attachment 76567 [details]
Ampersand Bug in Bookmarks view

Amarok 2.7.0 / KDE 4.9.5 / Arch

I've encountered a similiar bug in the bookmarks view (see attached screenshot). The ampersand is replaced by a "_".
Comment 14 Matěj Laitl 2013-01-19 16:27:58 UTC
(In reply to comment #13)
> Created attachment 76567 [details]
> Ampersand Bug in Bookmarks view
> 
> Amarok 2.7.0 / KDE 4.9.5 / Arch
> 
> I've encountered a similiar bug in the bookmarks view (see attached
> screenshot). The ampersand is replaced by a "_".

Hi, thanks for your report, but can you please open a new bug for it? While the bugs are similar, this one has already been fixed and the code is unrelated. Thanks!