BrowserBreadcrumbItem: treat folder names with & in them accordingly

BUG: 244817
FIXED-IN: 2.7